Add the ability to switch between English and Bulgarian locale

--- a/angular.json
+++ b/angular.json
@@ -4,6 +4,14 @@
   "newProjectRoot": "projects",
   "projects": {
     "ng-localization": {
+      "i18n": {
+        "sourceLocale": "en-US",
+        "locales": {
+          "bg": {
+            "translation": "public/locale/messages.bg.json"
+          }
+        }
+      },
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
